--- a/cluster/templates/registration_status.html
+++ b/cluster/templates/registration_status.html
@@ -22,7 +22,7 @@
                         </svg>
                     </div>
                     <p class="text-lg font-semibold text-green-600">Status: Approved</p>
-                    <a href="https://www.hackerrank.com/codecluster-1" class="text-blue-600 hover:underline">Click here</a>
+                    <a href="https://www.hackerrank.com/codecluster-1" target="_blank" class="text-blue-600 hover:underline">Click here</a>
                 {% elif status == "Pending" %}
                     <!-- Pending Status with Yellow Warning Icon -->
                     <div class="relative w-16 h-16 bg-yellow-200 rounded-full flex items-center justify-center">
