--- a/cluster/templates/index.html
+++ b/cluster/templates/index.html
@@ -159,17 +159,29 @@
     </p>
 
     <!-- Buttons -->
+
     <div class="flex space-x-4 animate-fadeIn delay-400">
       {% if user.is_authenticated %}
-      <a href="/register" class="bg-green-500 text-white px-6 py-3 rounded hover:bg-green-600 transition duration-300">
-          Register For Contest!
-      </a>
+          {% if register %}
+              {% if register.status == "Approved" %}
+                  <a href="{% url 'status' %}" class="bg-green-500 text-white px-6 py-3 rounded">Approved</a>
+              {% else %}
+                  <a href="{% url 'status' %}" class="bg-yellow-500 text-white px-6 py-3 rounded hover:bg-yellow-600 transition duration-300">
+                      Pending
+                  </a>
+              {% endif %}
+          {% else %}
+              <a href="{% url 'register' %}" class="bg-green-500 text-white px-6 py-3 rounded hover:bg-green-600 transition duration-300">
+                  Register for Contest!
+              </a>
+          {% endif %}
       {% else %}
-        <a href="/login" class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600 transition duration-300">
-            Login To Register
-        </a>
-        {% endif %}
-    </div>
+          <a href="{% url 'login' %}" class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600 transition duration-300">
+              Login to Register
+          </a>
+      {% endif %}
+  </div>
+  
 </section>
 
 
@@ -271,9 +283,26 @@
                 <p class="text-gray-400 mb-4 flex items-center text-sm md:text-base">
                     <i class="far fa-calendar-alt mr-2"></i> Date: {{con.date}}
                 </p>
-                <a href="{{con.url}}" target="_blank" class="bg-blue-500 text-white px-4 py-2 mt-4 rounded hover:bg-blue-600 transition duration-300">
-                    Register Now
-                </a>
+                {% if user.is_authenticated %}
+                    {% if register %}
+                        {% if register.status == "Approved" %}
+                        <a href="{% url 'status' %}" class="bg-green-500 text-white px-6 py-3 rounded">Approved</a>
+                {% else %}
+                <a href="{% url 'status' %}" class="bg-yellow-500 text-white px-6 py-3 rounded hover:bg-yellow-600 transition duration-300">
+                  Pending!
+              </a>
+                {% endif %}
+                {% else %}
+                    <a href="{%url 'register'%}" target="_blank" class="bg-blue-500 text-white px-4 py-2 mt-4 rounded hover:bg-blue-600 transition duration-300">
+                  Register Now
+              </a>
+                {% endif %}
+
+                {% else %}
+                <a href="{% url 'login' %}" class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600 transition duration-300">
+                  Login to Register
+              </a>
+                {% endif %}
             </div>
             {% endfor %}
         </div>
