--- a/cluster/templates/navbar.html
+++ b/cluster/templates/navbar.html
@@ -25,6 +25,7 @@
         <ul class="hidden md:flex space-x-8">
             <li><a href="#features" class="text-white hover:text-blue-500 transition duration-300">Features</a></li>
             <li><a href="#contests" class="text-white hover:text-blue-500 transition duration-300">Contests</a></li>
+            <li><a href="{% url 'about' %}" class="text-white hover:text-blue-500 transition duration-300">About</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'status' %}" class="text-white hover:text-blue-500 transition duration-300">Status</a></li>
             <li><a href="{% url 'logout' %}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition duration-300">Logout</a></li>
