--- a/cluster/templates/navbar.html
+++ b/cluster/templates/navbar.html
@@ -10,7 +10,7 @@
 <header class="fixed w-full bg-gray-800 bg-opacity-90 transition duration-300 z-50 shadow-md">
     <nav class="container mx-auto flex justify-between items-center py-4 px-5">
         <!-- Logo and Branding -->
-        <a href="#" class="text-xl font-bold text-blue-500 flex items-center space-x-2 hover:text-blue-300">
+        <a href="{% url 'home' %}" class="text-xl font-bold text-blue-500 flex items-center space-x-2 hover:text-blue-300">
             <i class="fas fa-code"></i> <span>CodeCluster</span>
         </a>
         
@@ -25,7 +25,6 @@
         <ul class="hidden md:flex space-x-8">
             <li><a href="#features" class="text-white hover:text-blue-500 transition duration-300">Features</a></li>
             <li><a href="#contests" class="text-white hover:text-blue-500 transition duration-300">Contests</a></li>
-            <li><a href="{% url 'about' %}" class="text-white hover:text-blue-500 transition duration-300">About</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'status' %}" class="text-white hover:text-blue-500 transition duration-300">Status</a></li>
             <li><a href="{% url 'logout' %}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition duration-300">Logout</a></li>
