--- a/cluster/templates/registration_status.html
+++ b/cluster/templates/registration_status.html
@@ -46,6 +46,7 @@
                 </svg>
             </div>
         {% endif %}
+        <a href="{%url 'home' %}" target="_blank" class="text-blue-600 hover:underline">Home</a>
     </div>
 </body>
 </html>
