--- a/cluster/templates/signup.html
+++ b/cluster/templates/signup.html
@@ -199,26 +199,57 @@
         <h2>Create Account</h2>
         <form method="post" action="{% url 'signup' %}" id="signupForm">
             {% csrf_token %}
-            {% for field in form %}
             <div class="form-group">
-                {{ field.label_tag }}
-                {{ field }}
-                {% if field.errors %}
+                {{ form.username.label_tag }}
+                {{ form.username }}
+                {% if form.username.errors %}
                 <ul class="errorlist">
-                    {% for error in field.errors %}
+                    {% for error in form.username.errors %}
                     <li>{{ error }}</li>
                     {% endfor %}
                 </ul>
                 {% endif %}
-                {% if field.name == 'password1' %}
-                <div class="password-strength">
-                    <div class="password-strength-bar"></div>
-                </div>
+            </div>
+        
+            <div class="form-group">
+                {{ form.email.label_tag }}
+                {{ form.email }}
+                {% if form.email.errors %}
+                <ul class="errorlist">
+                    {% for error in form.email.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
                 {% endif %}
             </div>
-            {% endfor %}
+        
+            <div class="form-group">
+                {{ form.password1.label_tag }}
+                {{ form.password1 }}
+                {% if form.password1.errors %}
+                <ul class="errorlist">
+                    {% for error in form.password1.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+        
+            <div class="form-group">
+                {{ form.password2.label_tag }}
+                {{ form.password2 }}
+                {% if form.password2.errors %}
+                <ul class="errorlist">
+                    {% for error in form.password2.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+        
             <button type="submit" class="btn-primary">Create Account</button>
         </form>
+        
         <p class="login-link">Already have an account? <a href="{% url 'login' %}">Login</a></p>
     </div>
 
